smb-filebrowser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smb-filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smb-filebrowser
  template:
    metadata:
      labels:
        app: smb-filebrowser
    spec:
      containers:
      - name: filebrowser
        image: filebrowser/filebrowser:latest
        volumeMounts:
        - name: smb-storage
          mountPath: /srv
      volumes:
      - name: smb-storage
        persistentVolumeClaim:
          claimName: pvc-smb
