smb-filebrowser-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smb-filebrowser
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: filebrowser.nerdsbythehour.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smb-filebrowser
                port:
                  number: 80
